# model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  Clay_shape2bucket.ipynb  Dockerfile  LICENSE  PANGAEA_BENCHMARK_ISSUE.md  README.md  TESTING_STATUS.md  Untitled.ipynb  benchmarks.html  classify.py  clay_tools.py  clayground.py  clayground_db.py  conda-lock.yml  copy_data.sh  datacube.py  docker-compose.yml  embeddings.html  environment.yml  finetunning.html  generate_embeddings.ipynb  generate_embeddings.py  generative.html  get_sentinel1rtc.py  index.html  model-license.md  model.html  pyproject.toml  robots.txt  ruff.toml  search.json  segment.py  sitemap.xml  srm_trainer.py  test.py  test_wall_to_wall_fix.py  (+8 more)
.binder/: environment.yml
Clay Model releases/: clay roadmap.html  clay v0 release.html
batch/: compute-environment.json  fetch_and_run.sh  job-definition.json  submit.py
benchmarks/: clay.yaml  clay_benchmark_sweep.py  clay_comprehensive_benchmark.py  clay_encoder.py  enhanced_clay_benchmark.py  run_all_clay_benchmarks.py
claymodel/: __init__.py  callbacks.py  callbacks_wandb.py  datamodule.py  factory.py  model.py  module.py  utils.py
cluster/: ml-cluster.yaml.template
configs/: classify_eurosat.yaml  config.yaml  metadata.yaml  regression_biomasters.yaml  segment_chesapeake.yaml
docker/: Dockerfile  all-naip.py
docs/: 240105-clay-v0-interpolation.ipynb  240105-clay-v0-visualization.ipynb  240105-location-embeddings.ipynb  README  README.md  _config.yml  _toc.yml  basic_use.md  benchmarks.md  changelog.md  clay-embeddings-feature.ipynb  clay-v0-location-embeddings.ipynb  clay-v0-partial-inputs.ipynb  clay-v0-reconstruction.ipynb  clay-v0-visualization.ipynb  clay-v1-wall-to-wall.ipynb  clay_over_aoi.ipynb  data_datacube.md  data_labels.md  data_sampling.md  index.md  (+20 more)
(+199 files in other folders)
