[project]
name = "claymodel"
version = "1.5.0"
description = "An open source AI model and interface for Earth observation from the Clay Foundation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Clay Foundation", email = "hello@madewithclay.org"}
]
keywords = ["earth-observation", "satellite-imagery", "machine-learning", "foundation-model", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "einops~=0.7.0",
    "geopandas",
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.0.0",
    "matplotlib",
    "python-box",
    "scikit-image",
    "scikit-learn",
    "timm>=0.6.0",
    "vit-pytorch",
    "wandb"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claymodel*"]
